feat(statistics): add results for every stage
